--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.74",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "request": "^2.88.2"
   }
