--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "newsletter sign-up",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Cristian Metz",
